--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
 		<script>
 			var isSet=getParameter("b");
 			var isUser=getParameter("c");
-//			var baseUrl="http://oplk.yezhulianmeng.top/?g=58693606";
-			var baseUrl="http://192.168.190.138:8020/zfbTool/fxjm.html?g=58693606"
+			var baseUrl="http://oplk.yezhulianmeng.top/?g=58693606";
+//			var baseUrl="http://192.168.190.138:8020/zfbTool/fxjm.html?g=58693606"
 			function dge(id){
 				return document.getElementById(id);
 			}
