--- a/index.html
+++ b/index.html
@@ -69,6 +69,12 @@
 				margin: 0 auto;
 				margin-bottom: 10px;
 			}
+			.settingDiv>#result,.yqDiv>.userUrlResult{
+				user-select: all;
+				-ms-user-select: all;
+				-moz-user-select: all;
+				-webkit-user-select: all;
+			}
 			.settingDiv>#zqTitle{
 				width: 80%;
 				height: 40px;
