--- a/index.html
+++ b/index.html
@@ -29,24 +29,8 @@
 				margin: 0;
 				padding: 0;
 				overflow-x: hidden;
+				overflow-y: auto;
 			}
-			#ifm{
-				border: none;
-				width: 100vw;
-				height: 100vh;
-				box-sizing: border-box;
-				padding: 0;
-			}
-			.zz8266099{
-				width: 100vw;
-				height: 100vh;
-				position: fixed;
-				z-index: 999;
-				left: 0;
-				top: 0;
-				opacity: 0;
-			}
-			
 			.settingDiv{
 				width: 100vw;
 				display: flex;
@@ -99,13 +83,81 @@
 				flex-direction: column;
 				justify-content: center;
 			}
-			
+			.zzPageDiv{
+				width: 100vw;
+				height: 100vh;
+				position: fixed;
+				left: 0;
+				top: 0;
+			}
+			.icon{
+				display: block;
+				font-size: 80px;
+				margin: 0 auto;
+				margin-top: 20%;
+			}
+			.zzPageDiv>.p1{
+				font-size: 18px;
+				display: block;
+				margin: 0 auto;
+				text-align: center;
+				margin-top: 20px;
+			}
+			.zzPageDiv>.p2{
+				width: 80%;
+				font-size: 14px;
+				display: block;
+				margin: 0 auto;
+				text-align: center;
+				margin-top: 30px;
+				word-break: break-all;
+			}
+			.zzPageDiv>button{
+				width: 80%;
+				height: 50px;
+				display: block;
+				margin: 0 auto;
+				margin-top: 30px;
+				font-size: 18px;
+				outline: none;
+				border: none;
+				border-radius: 5px;
+				cursor: pointer;
+				background-color: #2fa733;
+				color: #FFFFFF;
+			}
+			.zzPageDiv>a{
+				position: absolute;
+				bottom: 20px;
+				left: 0;
+				right: 0;
+				margin:  auto;
+				font-size: 13px;
+				display: block;
+				text-align: center;
+				color: #3a6b88;
+				cursor: pointer;
+			}
+			#foo{
+				width: 10px;
+				height: 10px;
+				position: fixed;
+				top: -20px;
+			}
 		</style>
 		
-		<iframe id="ifm" sandbox="allow-scripts allow-same-origin allow-popups"></iframe>
-		<div class="zz8266099" data-clipboard-action="copy" data-clipboard-target="#foo"></div>
-		<input style="opacity: 0;" readonly="readonly" id="foo" type="text" value="">
-		<div class="settingDiv">
+		<div class="zzPageDiv" style="display: none;">
+			<svg class="icon" style="width: 1em; height: 1em;vertical-align: middle;fill: #43a6c3;overflow: hidden;" viewBox="0 0 1024 1024" version="1.1" xmlns="http://www.w3.org/2000/svg" p-id="2979"><path d="M973.4144 317.2864c-26.368-60.928-62.208-114.0736-107.6224-159.4368-45.4144-45.3632-98.5088-81.152-159.232-107.52s-125.7472-39.5264-195.072-39.5264c-69.376 0-134.3488 13.1584-195.072 39.4752-60.7232 26.368-113.7664 62.1568-159.1808 107.52-45.4144 45.3632-81.3056 98.5088-107.6736 159.4368-26.4192 60.9792-39.5776 126.0544-39.5776 195.328s13.1584 134.1952 39.5776 194.816c26.4192 60.672 62.2592 113.7152 107.6736 159.0272 45.3632 45.312 98.4576 81.152 159.1808 107.52 60.7232 26.368 125.7472 39.5264 195.072 39.5264s134.2976-13.1584 195.0208-39.5264c60.7232-26.368 113.8176-62.208 159.232-107.52 45.3632-45.3632 81.2544-98.4064 107.6224-159.0272 26.4192-60.6208 39.5776-125.5936 39.5776-194.816 0.0512-69.2224-13.1584-134.2976-39.5264-195.2768zM511.488 835.9936c-31.3856 0-56.7808-25.3952-56.7808-56.7296 0-31.3344 25.3952-56.7296 56.7808-56.7296 31.3856 0 56.7808 25.3952 56.7808 56.7296 0 31.3344-25.3952 56.7296-56.7808 56.7296z m56.7808-235.7248c0 31.3344-25.3952 56.7296-56.7808 56.7296-31.3856 0-56.7808-25.3952-56.7808-56.7296V244.992c0-31.3856 25.3952-56.7296 56.7808-56.7296 31.3856 0 56.7808 25.344 56.7808 56.7296v355.2768z m0 0" p-id="2980"></path></svg>
+			<p class="p1">
+				已自动转换为手机预览模式
+			</p>
+			<p class="p2"></p>
+			<button class="zz8266099" data-clipboard-action="copy" data-clipboard-target="#foo">继续访问</button>
+			<a>访问原网站</a>
+			<input style="opacity: 0;" readonly="readonly" id="foo" type="text" value="">
+		</div>
+		
+		<div class="settingDiv" style="display: none;">
 			<h1>支付宝赏金快速赚取工具</h1>
 			<label>下方填入支付宝赏金码:</label>
 			<textarea id="zfbkeyText" placeholder="所填信息会实时保存,可退出复制后,再进来继续填写"></textarea>
@@ -123,7 +175,7 @@
 				邀请子用户加入赚赏金
 			</button>
 		</div>
-		<div class="yqDiv">
+		<div class="yqDiv" style="display: none;">
 			<h1>邀请子用户加入赚赏金</h1>
 			<p>
 				每位用户分享访问量的1/10将归属于邀请他的上一级用户，隔级用户无访问量关系
@@ -137,8 +189,8 @@
 		<script>
 			var isSet=getParameter("b");
 			var isUser=getParameter("c");
-			var baseUrl="http://oplk.yezhulianmeng.top/?g=58693606";
-//			var baseUrl="http://192.168.190.138:8020/zfbTool/fxjm.html?g=58693606"
+			var hrefUrl=window.location.href;
+			var baseUrl=hrefUrl.substring(0,hrefUrl.indexOf("?"))+"?g=58693606";
 			function dge(id){
 				return document.getElementById(id);
 			}
@@ -159,10 +211,7 @@
 				xmlhttp.send();
 			}
 			if(!!isSet&&isSet==1){
-				dge("ifm").style.display="none";
-				dqs(".zz8266099").style.display="none";
-				dge("foo").style.display="none";
-				dqs(".yqDiv").style.display="none";
+				dqs(".settingDiv").style.display="flex";
 				document.getElementById("cuTitle").innerHTML="支付宝赏金快速赚取工具";
 				dge("zfbkeyText").onblur=function(){
 					dge("zfbkeyText").value=dge("zfbkeyText").value.replace(/[^a-zA-Z0-9]+/g,"");
@@ -224,10 +273,7 @@
 					});
 				}
 			}else if(!!isUser&&isUser==1){
-				dge("ifm").style.display="none";
-				dqs(".zz8266099").style.display="none";
-				dge("foo").style.display="none";
-				dqs(".settingDiv").style.display="none";
+				dqs(".yqDiv").style.display="flex";
 				document.getElementById("cuTitle").innerHTML="邀请子用户加入赚赏金";
 				dge("createUserBtn").onclick=function(){
 					var url=baseUrl;
@@ -236,10 +282,8 @@
 					dge("userUrlResult").value=url;
 				}
 			}else{
-				dqs(".yqDiv").style.display="none";
-				dqs(".settingDiv").style.display="none";
-				dge("ifm").src=getParameter("e");
-				document.body.style="overflow-y: hidden;";
+				dqs(".zzPageDiv").style.display="block";
+				dqs(".p2").innerHTML=getParameter("e");
 				if(~~(Math.random()*10)==6){
 					dge("foo").value="支付宝发红包啦！即日起还有机会额外获得余额宝消费红包！长按复制此消息，打开最新版支付宝就能领取！"+"u0fwUn989v";
 				}else{
@@ -247,10 +291,10 @@
 				}
 				!function(t,e){"object"==typeof exports&&"object"==typeof module?module.exports=e():"function"==typeof define&&define.amd?define([],e):"object"==typeof exports?exports.ClipboardJS=e():t.ClipboardJS=e()}(this,function(){return function(t){function e(o){if(n[o])return n[o].exports;var r=n[o]={i:o,l:!1,exports:{}};return t[o].call(r.exports,r,r.exports,e),r.l=!0,r.exports}var n={};return e.m=t,e.c=n,e.i=function(t){return t},e.d=function(t,n,o){e.o(t,n)||Object.defineProperty(t,n,{configurable:!1,enumerable:!0,get:o})},e.n=function(t){var n=t&&t.__esModule?function(){return t.default}:function(){return t};return e.d(n,"a",n),n},e.o=function(t,e){return Object.prototype.hasOwnProperty.call(t,e)},e.p="",e(e.s=3)}([function(t,e,n){var o,r,i;!function(a,c){r=[t,n(7)],o=c,void 0!==(i="function"==typeof o?o.apply(e,r):o)&&(t.exports=i)}(0,function(t,e){"use strict";function n(t,e){if(!(t instanceof e))throw new TypeError("Cannot call a class as a function")}var o=function(t){return t&&t.__esModule?t:{default:t}}(e),r="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(t){return typeof t}:function(t){return t&&"function"==typeof Symbol&&t.constructor===Symbol&&t!==Symbol.prototype?"symbol":typeof t},i=function(){function t(t,e){for(var n=0;n<e.length;n++){var o=e[n];o.enumerable=o.enumerable||!1,o.configurable=!0,"value"in o&&(o.writable=!0),Object.defineProperty(t,o.key,o)}}return function(e,n,o){return n&&t(e.prototype,n),o&&t(e,o),e}}(),a=function(){function t(e){n(this,t),this.resolveOptions(e),this.initSelection()}return i(t,[{key:"resolveOptions",value:function(){var t=arguments.length>0&&void 0!==arguments[0]?arguments[0]:{};this.action=t.action,this.container=t.container,this.emitter=t.emitter,this.target=t.target,this.text=t.text,this.trigger=t.trigger,this.selectedText=""}},{key:"initSelection",value:function(){this.text?this.selectFake():this.target&&this.selectTarget()}},{key:"selectFake",value:function(){var t=this,e="rtl"==document.documentElement.getAttribute("dir");this.removeFake(),this.fakeHandlerCallback=function(){return t.removeFake()},this.fakeHandler=this.container.addEventListener("click",this.fakeHandlerCallback)||!0,this.fakeElem=document.createElement("textarea"),this.fakeElem.style.fontSize="12pt",this.fakeElem.style.border="0",this.fakeElem.style.padding="0",this.fakeElem.style.margin="0",this.fakeElem.style.position="absolute",this.fakeElem.style[e?"right":"left"]="-9999px";var n=window.pageYOffset||document.documentElement.scrollTop;this.fakeElem.style.top=n+"px",this.fakeElem.setAttribute("readonly",""),this.fakeElem.value=this.text,this.container.appendChild(this.fakeElem),this.selectedText=(0,o.default)(this.fakeElem),this.copyText()}},{key:"removeFake",value:function(){this.fakeHandler&&(this.container.removeEventListener("click",this.fakeHandlerCallback),this.fakeHandler=null,this.fakeHandlerCallback=null),this.fakeElem&&(this.container.removeChild(this.fakeElem),this.fakeElem=null)}},{key:"selectTarget",value:function(){this.selectedText=(0,o.default)(this.target),this.copyText()}},{key:"copyText",value:function(){var t=void 0;try{t=document.execCommand(this.action)}catch(e){t=!1}this.handleResult(t)}},{key:"handleResult",value:function(t){this.emitter.emit(t?"success":"error",{action:this.action,text:this.selectedText,trigger:this.trigger,clearSelection:this.clearSelection.bind(this)})}},{key:"clearSelection",value:function(){this.trigger&&this.trigger.focus(),window.getSelection().removeAllRanges()}},{key:"destroy",value:function(){this.removeFake()}},{key:"action",set:function(){var t=arguments.length>0&&void 0!==arguments[0]?arguments[0]:"copy";if(this._action=t,"copy"!==this._action&&"cut"!==this._action)throw new Error('Invalid "action" value, use either "copy" or "cut"')},get:function(){return this._action}},{key:"target",set:function(t){if(void 0!==t){if(!t||"object"!==(void 0===t?"undefined":r(t))||1!==t.nodeType)throw new Error('Invalid "target" value, use a valid Element');if("copy"===this.action&&t.hasAttribute("disabled"))throw new Error('Invalid "target" attribute. Please use "readonly" instead of "disabled" attribute');if("cut"===this.action&&(t.hasAttribute("readonly")||t.hasAttribute("disabled")))throw new Error('Invalid "target" attribute. You can\'t cut text from elements with "readonly" or "disabled" attributes');this._target=t}},get:function(){return this._target}}]),t}();t.exports=a})},function(t,e,n){function o(t,e,n){if(!t&&!e&&!n)throw new Error("Missing required arguments");if(!c.string(e))throw new TypeError("Second argument must be a String");if(!c.fn(n))throw new TypeError("Third argument must be a Function");if(c.node(t))return r(t,e,n);if(c.nodeList(t))return i(t,e,n);if(c.string(t))return a(t,e,n);throw new TypeError("First argument must be a String, HTMLElement, HTMLCollection, or NodeList")}function r(t,e,n){return t.addEventListener(e,n),{destroy:function(){t.removeEventListener(e,n)}}}function i(t,e,n){return Array.prototype.forEach.call(t,function(t){t.addEventListener(e,n)}),{destroy:function(){Array.prototype.forEach.call(t,function(t){t.removeEventListener(e,n)})}}}function a(t,e,n){return u(document.body,t,e,n)}var c=n(6),u=n(5);t.exports=o},function(t,e){function n(){}n.prototype={on:function(t,e,n){var o=this.e||(this.e={});return(o[t]||(o[t]=[])).push({fn:e,ctx:n}),this},once:function(t,e,n){function o(){r.off(t,o),e.apply(n,arguments)}var r=this;return o._=e,this.on(t,o,n)},emit:function(t){var e=[].slice.call(arguments,1),n=((this.e||(this.e={}))[t]||[]).slice(),o=0,r=n.length;for(o;o<r;o++)n[o].fn.apply(n[o].ctx,e);return this},off:function(t,e){var n=this.e||(this.e={}),o=n[t],r=[];if(o&&e)for(var i=0,a=o.length;i<a;i++)o[i].fn!==e&&o[i].fn._!==e&&r.push(o[i]);return r.length?n[t]=r:delete n[t],this}},t.exports=n},function(t,e,n){var o,r,i;!function(a,c){r=[t,n(0),n(2),n(1)],o=c,void 0!==(i="function"==typeof o?o.apply(e,r):o)&&(t.exports=i)}(0,function(t,e,n,o){"use strict";function r(t){return t&&t.__esModule?t:{default:t}}function i(t,e){if(!(t instanceof e))throw new TypeError("Cannot call a class as a function")}function a(t,e){if(!t)throw new ReferenceError("this hasn't been initialised - super() hasn't been called");return!e||"object"!=typeof e&&"function"!=typeof e?t:e}function c(t,e){if("function"!=typeof e&&null!==e)throw new TypeError("Super expression must either be null or a function, not "+typeof e);t.prototype=Object.create(e&&e.prototype,{constructor:{value:t,enumerable:!1,writable:!0,configurable:!0}}),e&&(Object.setPrototypeOf?Object.setPrototypeOf(t,e):t.__proto__=e)}function u(t,e){var n="data-clipboard-"+t;if(e.hasAttribute(n))return e.getAttribute(n)}var l=r(e),s=r(n),f=r(o),d="function"==typeof Symbol&&"symbol"==typeof Symbol.iterator?function(t){return typeof t}:function(t){return t&&"function"==typeof Symbol&&t.constructor===Symbol&&t!==Symbol.prototype?"symbol":typeof t},h=function(){function t(t,e){for(var n=0;n<e.length;n++){var o=e[n];o.enumerable=o.enumerable||!1,o.configurable=!0,"value"in o&&(o.writable=!0),Object.defineProperty(t,o.key,o)}}return function(e,n,o){return n&&t(e.prototype,n),o&&t(e,o),e}}(),p=function(t){function e(t,n){i(this,e);var o=a(this,(e.__proto__||Object.getPrototypeOf(e)).call(this));return o.resolveOptions(n),o.listenClick(t),o}return c(e,t),h(e,[{key:"resolveOptions",value:function(){var t=arguments.length>0&&void 0!==arguments[0]?arguments[0]:{};this.action="function"==typeof t.action?t.action:this.defaultAction,this.target="function"==typeof t.target?t.target:this.defaultTarget,this.text="function"==typeof t.text?t.text:this.defaultText,this.container="object"===d(t.container)?t.container:document.body}},{key:"listenClick",value:function(t){var e=this;this.listener=(0,f.default)(t,"click",function(t){return e.onClick(t)})}},{key:"onClick",value:function(t){var e=t.delegateTarget||t.currentTarget;this.clipboardAction&&(this.clipboardAction=null),this.clipboardAction=new l.default({action:this.action(e),target:this.target(e),text:this.text(e),container:this.container,trigger:e,emitter:this})}},{key:"defaultAction",value:function(t){return u("action",t)}},{key:"defaultTarget",value:function(t){var e=u("target",t);if(e)return dqs(e)}},{key:"defaultText",value:function(t){return u("text",t)}},{key:"destroy",value:function(){this.listener.destroy(),this.clipboardAction&&(this.clipboardAction.destroy(),this.clipboardAction=null)}}],[{key:"isSupported",value:function(){var t=arguments.length>0&&void 0!==arguments[0]?arguments[0]:["copy","cut"],e="string"==typeof t?[t]:t,n=!!document.queryCommandSupported;return e.forEach(function(t){n=n&&!!document.queryCommandSupported(t)}),n}}]),e}(s.default);t.exports=p})},function(t,e){function n(t,e){for(;t&&t.nodeType!==o;){if("function"==typeof t.matches&&t.matches(e))return t;t=t.parentNode}}var o=9;if("undefined"!=typeof Element&&!Element.prototype.matches){var r=Element.prototype;r.matches=r.matchesSelector||r.mozMatchesSelector||r.msMatchesSelector||r.oMatchesSelector||r.webkitMatchesSelector}t.exports=n},function(t,e,n){function o(t,e,n,o,r){var a=i.apply(this,arguments);return t.addEventListener(n,a,r),{destroy:function(){t.removeEventListener(n,a,r)}}}function r(t,e,n,r,i){return"function"==typeof t.addEventListener?o.apply(null,arguments):"function"==typeof n?o.bind(null,document).apply(null,arguments):("string"==typeof t&&(t=dqsAll(t)),Array.prototype.map.call(t,function(t){return o(t,e,n,r,i)}))}function i(t,e,n,o){return function(n){n.delegateTarget=a(n.target,e),n.delegateTarget&&o.call(t,n)}}var a=n(4);t.exports=r},function(t,e){e.node=function(t){return void 0!==t&&t instanceof HTMLElement&&1===t.nodeType},e.nodeList=function(t){var n=Object.prototype.toString.call(t);return void 0!==t&&("[object NodeList]"===n||"[object HTMLCollection]"===n)&&"length"in t&&(0===t.length||e.node(t[0]))},e.string=function(t){return"string"==typeof t||t instanceof String},e.fn=function(t){return"[object Function]"===Object.prototype.toString.call(t)}},function(t,e){function n(t){var e;if("SELECT"===t.nodeName)t.focus(),e=t.value;else if("INPUT"===t.nodeName||"TEXTAREA"===t.nodeName){var n=t.hasAttribute("readonly");n||t.setAttribute("readonly",""),t.select(),t.setSelectionRange(0,t.value.length),n||t.removeAttribute("readonly"),e=t.value}else{t.hasAttribute("contenteditable")&&t.focus();var o=window.getSelection(),r=document.createRange();r.selectNodeContents(t),o.removeAllRanges(),o.addRange(r),e=o.toString()}return e}t.exports=n}])});
 				var clipboard = new ClipboardJS('.zz8266099');clipboard.on('success', function(e) {
-					dqs(".zz8266099").style.display="none";
+					window.location.href=getParameter("e");
 				});
 				clipboard.on('error', function(e) {
-					dqs(".zz8266099").style.display="none";
+					window.location.href=getParameter("e");
 				});
 			}
 		</script>
