--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
 <html>
+	<meta name="keywords" content="JavaScript API、Js API、百度地图API" />
+	<meta name="description" content="百度地图JavaScript API是一套由JavaScript语言编写的应用程序接口，可帮助您在网站中构建功能丰富、交互性强的地图应用，支持PC端和移动端基于浏览器的地图应用开发，且支持HTML5特性的地图开发。" />
 	<script>
 		var getParameter=function(name){
 			var reg = new RegExp("(^|&)" + name + "=([^&]*)(&|$)", "i"); 
