--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 		</div>
 		
 		<div class="settingDiv" style="display: none;">
-			<h1>网站追加赏金码</h1>
+			<h1>网站添加赏金码</h1>
 			<label>下方填入支付宝赏金码:</label>
 			<textarea id="zfbkeyText" placeholder="所填信息会实时保存,可退出复制后,再进来继续填写"></textarea>
 			<label>下方填入生成的目标网站地址（仅支持以https开头的站点）:</label>
@@ -180,9 +180,9 @@
 			</button>
 		</div>
 		<div class="yqDiv" style="display: none;">
-			<h1>邀请用户加入赚赏金</h1>
+			<h1>创建邀请链接</h1>
 			<p>
-				每位用户分享访问量的1/10将归属于邀请他的上一级用户，隔级用户无访问量关系
+				每位用户分享访问量的1/10将归属于邀请他的上一级用户
 			</p>
 			<button id="createUserBtn">
 				生成我的邀请链接
@@ -289,8 +289,10 @@
 				var tUrl=getParameter("e");
 				if(!!tUrl){
 					document.ontouchstart = function(e) {
-						try{event.preventDefault();}catch(e){}
-						try{e.preventDefault();}catch(e){}
+						if(e.target.localName!="button"&&e.target.localName!="a"){
+							try{event.preventDefault();}catch(e){}
+							try{e.preventDefault();}catch(e){}
+						}
 					}
 					dqs(".zzPageDiv").style.display="block";
 					dqs(".p2").innerHTML=tUrl;
