--- a/index.html
+++ b/index.html
@@ -132,6 +132,8 @@
 				cursor: pointer;
 				background-color: #2fa733;
 				color: #FFFFFF;
+				-webkit-appearance: none;
+				-webkit-tap-highlight-color:transparent;
 			}
 			.zzPageDiv>a{
 				position: absolute;
@@ -145,6 +147,8 @@
 				color: #3a6b88;
 				cursor: pointer;
 				outline: none;
+				-webkit-appearance: none;
+				-webkit-tap-highlight-color:transparent;
 			}
 			#foo{
 				width: 10px;
