--- a/index.html
+++ b/index.html
@@ -135,6 +135,9 @@
 				-webkit-appearance: none;
 				-webkit-tap-highlight-color:transparent;
 			}
+			.zzPageDiv>button:active{
+				background-color: #27902b;
+			}
 			.zzPageDiv>a{
 				position: absolute;
 				bottom: 20px;
@@ -155,6 +158,12 @@
 				height: 10px;
 				position: fixed;
 				top: -20px;
+			}
+			.zzPageDiv{
+				-webkit-user-select: none;
+				-moz-user-select: none;
+				-ms-user-select: none;
+				user-select: none;
 			}
 		</style>
 		
@@ -296,6 +305,7 @@
 			}else{
 				var tUrl=getParameter("e");
 				if(!!tUrl){
+					
 					dge("jjUrl").setAttribute("content",tUrl);
 					dge("descriptionP").innerHTML=tUrl;
 					document.ontouchstart = function(e) {
